fixing some font size issues on larger browsers. removing extra margin from bottom menu

--- a/wp-content/themes/campsite-2017/sass/navigation/_menus.scss
+++ b/wp-content/themes/campsite-2017/sass/navigation/_menus.scss
@@ -14,6 +14,8 @@
 		}
 
 		li {
+			margin-bottom: 0;
+			
 			&:hover, &.focus {
 				background: $color__white;
 
