--- a/wp-content/themes/campsite-2017/sass/site/secondary/_footer.scss
+++ b/wp-content/themes/campsite-2017/sass/site/secondary/_footer.scss
@@ -17,7 +17,7 @@
 		background-position: center top; 
 		background-size: 100%;
 		width: 100%;
-		height: 603px;
+		height: 100%;
 		display: block;
 		z-index: 1;
 	}
