--- a/wp-content/themes/campsite-2017/style.css
+++ b/wp-content/themes/campsite-2017/style.css
@@ -531,14 +531,16 @@ a {
       display: table;
       table-layout: fixed;
       padding: 0 30px 0; } }
-  .main-navigation #primary-menu li:hover, .main-navigation #primary-menu li.focus {
-    background: #ffffff; }
-    .main-navigation #primary-menu li:hover > a, .main-navigation #primary-menu li.focus > a {
-      color: #00627E; }
-  .main-navigation #primary-menu li a {
-    color: #111111; }
-    .main-navigation #primary-menu li a:hover, .main-navigation #primary-menu li a.focus {
-      color: #00627E; }
+  .main-navigation #primary-menu li {
+    margin-bottom: 0; }
+    .main-navigation #primary-menu li:hover, .main-navigation #primary-menu li.focus {
+      background: #ffffff; }
+      .main-navigation #primary-menu li:hover > a, .main-navigation #primary-menu li.focus > a {
+        color: #00627E; }
+    .main-navigation #primary-menu li a {
+      color: #111111; }
+      .main-navigation #primary-menu li a:hover, .main-navigation #primary-menu li a.focus {
+        color: #00627E; }
   .main-navigation #primary-menu > li.menu-item-has-children:hover > a, .main-navigation #primary-menu > li.menu-item-has-children.focus > a {
     color: #00627E; }
     .main-navigation #primary-menu > li.menu-item-has-children:hover > a:after, .main-navigation #primary-menu > li.menu-item-has-children.focus > a:after {
@@ -949,6 +951,9 @@ a {
       .wcus-practical-info figcaption {
         font-size: 22px;
         font-size: 1.75vw; } }
+    @media only screen and (min-width: 1280px) {
+      .wcus-practical-info figcaption {
+        font-size: 22px; } }
     .wcus-practical-info figcaption:before {
       transition: all 0.25s ease-in-out;
       content: '';
@@ -1015,6 +1020,9 @@ a {
       margin: 0;
       text-transform: uppercase;
       position: relative; }
+      @media only screen and (min-width: 1280px) {
+        .wcus-calls .wcus-callout h3 {
+          font-size: 44px; } }
       .wcus-calls .wcus-callout h3:after {
         content: '';
         transition: width 0.25s ease-in;
@@ -1062,7 +1070,7 @@ a {
     background-position: center top;
     background-size: 100%;
     width: 100%;
-    height: 603px;
+    height: 100%;
     display: block;
     z-index: 1; }
   .site-footer > div {
